--- a/curdjson.html
+++ b/curdjson.html
@@ -29,6 +29,15 @@
     <button onclick="updatedata()">update</button>
    </fieldset>
    </form>
+
+   <form action="">
+        <fieldset>
+            <legend>DELETE UPDATE</legend>
+            ID: <input type="text"  id="did"><br>
+        
+           <button onclick="deletedata()">DELETE DATA</button>
+        </fieldset>
+    </form>
     <script src="app.js"></script>
 </body>
 </html>
